--- a/index.html
+++ b/index.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <meta name="description" content="my work for WDD131">
-    <meta name="author" content="Taylor Sanders">
-    <link rel="stylesheet" href="styles/styles.css" />
-  </head>
-  <body>
-    <header>
-        <h1>Taylor: WDD 131 portfolio</h1>
-    </header>
-      <nav>
-        <a href="Mission/index.html">Mission Page</a>
-        <a href="Ponder/W01.1/index.html">Ponder Week 1</a>
-        <a href="Ponder/W01.2/index.html">Ponder Week 1.2</a>
-        <a href="Ponder/W02/index.html">Ponder week 2</a>
-      </nav>
-  </body>
+    <title>Mission Statement</title>
+
+    <meta name="description" content="BYU-Idaho Mission Statement">
+    <meta name="author" content="Taylor">
+
+    <link rel="stylesheet" href="styles.css" >
+    <script src="mission.js" defer></script>
+</head>
+<body>
+    
+    <select>
+
+        <option>Choose Mode</option>
+
+        <option value="dark">Dark</option>
+
+        <option value="light">Light</option>
+
+    </select>              
+                    
+    <main class="home-main">
+        <h1>MISSION STATEMENT</h1>
+
+        <h2>BRIGHAM YOUNG UNIVERSITY-IDAHO</h2>
+
+        <p>
+            Brigham Young University-Idaho was founded and is supported and guided by
+            The Church of Jesus Christ of Latter-day Saints. Its mission is to develop
+            disciples of Jesus Christ who are leaders in their homes, the Church, and
+            their communities.
+        </p>
+
+        <p class="font">The university does this by:</p>
+
+        <p>
+            <div>
+                1. Building testimonies of the restored gospel of Jesus Christ and fostering
+                its principles in a wholesome academic, cultural, and social environment.
+            </div>
+            <div>
+                2. Providing a high-quality education that prepares students of diverse
+                interests and abilities for lifelong learning and employment.
+            </div>
+            <div>
+                3. Serving as many students as possible within resource constraints.
+            </div>
+            <div>
+                4. Delivering education that is affordable for students and the Church.
+            </div>
+        </p>
+<footer href="index.html" id="logo_link">
+          <img
+            class="logo"
+            src="https://wddbyui.github.io/wdd131/images/byui-logo-blue.webp" alt="BYUI logo"/>
+</footer>
+    </main>
+</body>
 </html>
